# rodoia

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  NOTICE  PROMPT_MESTRE.md  README.md  docker-compose.yml  pyproject.toml  requirements-ci.in
.claude/agents/: especialista-engenharia-ia.md
.github/workflows/: ci.yml  reproduzir.yml
anotacao/: INSTRUCOES.md  INSTRUCOES_GOLD.md  anotador_A.xlsx  anotador_B.xlsx  gold_fonte.csv  gold_fonte_A.xlsx  gold_fonte_B.xlsx  relevancia.csv
data/: README.md
data/processed/: .gitignore  acidentes.parquet.dvc  cfpb.dvc  cuad.dvc  ft_dataset.jsonl  ft_dataset_holdout.jsonl  ft_dataset_treino.jsonl  ner_test.jsonl  ner_train_sub.jsonl
data/raw/: .gitignore  acidentes.dvc  cfpb.dvc  cuad.dvc  normas.dvc
deploy/hf_space/: Dockerfile  README.md  app.py  requirements.txt
deploy/hf_space_static/: README.md  exportar.py  index.html
docs/: 00_validacao_fontes_antt.md  01_arquitetura_fases_0_1.md  02_fase0_baseline.md  03_fase0_diagnostico.md  04_fase0_rede_neural.md  05_fase0_attention.md  06_fase1_fontes_rag.md  07_fase1_retrieval_hibrido.md  08_fase1_seguranca.md  09_fase1_api.md  10_fase2_handoff_nitro.md  11_fase2_resultados.md  12_backlog_rigor.md  13_fase2_ner.md  14_fase3_dados_estruturados.md  15_fase4_agente.md  16_fase5_mlops.md  17_fase6_escala.md  ARQUITETURA.md  DATASET_CARD.md  DIARIO.md  GUIA_ENGENHARIA_IA.md  HISTORIA.md  MODEL_CARD.md  RUNBOOK.md  diario.html
notebooks/: 00_matematica_aplicada.ipynb
reports/: sbom.cdx.json
reports/fase0_baseline/: comparacao.md  metrics.json
reports/fase0_diagnostico/: diagnostico.json
reports/fase0_mlp/: mlp.json
reports/fase1_geracao/: avaliacao_geracao.json  painel_juizes.json
reports/fase1_rag/: corpus.json  kappa_gold_fonte.json  kappa_humano.json
reports/fase1_retrieval/: avaliacao_retrieval.json  hit5_auditado.json  reproducao.json
reports/fase1_seguranca/: redteam.json
reports/fase2_ft/: avaliacao_factual.json  avaliacao_ft.json  benchmark_vllm.json  comparacao.md  dataset_stats.json  perplexidade_base.json  perplexidade_base_holdout.json  perplexidade_base_insample.json  perplexidade_ft.json  perplexidade_ft_holdout.json  perplexidade_ft_insample.json  quantizacao_qualidade.json  respostas_base.json  respostas_ft.json  split_holdout.json  versoes_nitro.txt  winrate_ft.json  winrate_ft_controlado.json
reports/fase2_ner/: bertimbau.json  comparacao.json  generativo_base.json  generativo_ft.json
reports/fase3_dados/: analitico.json  estrela.json  previsao.json
reports/fase4_agente/: avaliacao.json  entidades_smoke.json  roteamento.json
reports/fase5_mlops/: carga.json  custo.json  drift.json
reports/fase6_cuad/: integridade.json  retrieval_bm25.json
reports/fase6_escala/: contagem_cfpb.json
src/rodoia/: __init__.py  anotacao.py  config.py  estat.py  juiz.py  observabilidade.py  proveniencia.py
src/rodoia/agente/: __init__.py  avaliar.py  casos.py  estado.py  ferramentas.py  grafo.py  roteador.py
src/rodoia/api/: __init__.py  app.py
src/rodoia/dados/: acesso.py  consultas.py  estrela.py  previsao.py
src/rodoia/data/: baixar_acidentes.py  baixar_volume.py  ingestao_acidentes.py  ingestao_volume.py
src/rodoia/dominio/: acesso.py  consultas.py  estrela.py  previsao.py
src/rodoia/ft/: __init__.py  aval_cite.py  avaliar_ft.py  benchmark_vllm.py  construir_dataset.py  gen_offline.py  juiz_factual.py  juiz_winrate.py  merge_quantiza.py  perplexidade.py  quantizacao_qualidade.py  split_dataset.py  treino_qlora.py
src/rodoia/fundamentos/: __init__.py  attention.py  backprop_numpy.py
src/rodoia/ingestao/: __init__.py  baixar_acidentes.py  baixar_cfpb.py  baixar_volume.py  esquema_acidentes.py  ingestao_acidentes.py  ingestao_cfpb.py  ingestao_volume.py
src/rodoia/ml/: __init__.py  classico.py  diagnostico.py  mlp_torch.py
src/rodoia/mlops/: __init__.py  carga.py  custo.py  drift.py  gate.py  rastreio.py  reproduzir.py
src/rodoia/ner/: avaliar_generativo.py  bertimbau.py  generativo.py  lener.py
src/rodoia/rag/: __init__.py  avaliacao_cuad.py  avaliacao_geracao.py  avaliacao_retrieval.py  baixar_cuad.py  baixar_normas.py  chunking.py  construir_indice.py  cuad.py  embeddings.py  fontes_antt.py  gerar.py  indice.py  llm.py  painel_juizes.py  recuperador.py  redteam.py  seguranca.py
tests/: conftest.py  test_acidentes_esquema.py  test_agente.py  test_api.py  test_attention.py  test_avaliacao_cuad.py  test_avaliacao_geracao.py  test_backprop_numpy.py  test_chunking.py  test_classico.py  test_cuad.py  test_dados.py  test_diagnostico.py  test_fontes_antt.py  test_ft_avaliacao.py  test_ft_dataset.py  test_ft_pipeline.py  test_ft_scripts.py  test_gate.py  test_gerar.py  test_indice.py  test_ingestao_acidentes.py  test_ingestao_cfpb.py  test_ml_treino.py  test_mlops.py  test_mlp_torch.py  test_ner.py  test_painel_juizes.py  test_rag_rigor.py  test_recuperador.py  test_redteam.py  test_seguranca.py  test_smoke.py
