[project]
name = "rodoia"
version = "0.0.0"
description = "Plataforma de IA sobre a regulação e os dados abertos do transporte rodoviário brasileiro (ANTT)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alan Joffre" }]

# Dependência mínima do núcleo. As libs pesadas de cada fase entram como
# extras, para não obrigar quem clona a instalar PyTorch/vLLM só pra ler o RAG.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
# Fase 0 — fundamentos ML/DL
fundamentos = ["numpy>=1.26", "scikit-learn>=1.5", "torch>=2.3", "matplotlib>=3.9", "pandas>=2.2"]
# Fase 1 — RAG
rag = ["fastapi>=0.111", "uvicorn>=0.30", "qdrant-client>=1.9", "sentence-transformers>=3.0", "rank-bm25>=0.2", "langchain>=0.2", "ragas>=0.1"]
# Fase 2 — fine-tuning/serving (roda na Nitro/CUDA; conjunto exato validado em
# reports/fase2_ft/versoes_nitro.txt). Pisos elevados p/ a API nova (trl 1.x usa
# SFTConfig.max_length; transformers 5.x usa dtype=). AWQ via autoawq foi DESCARTADO
# (descontinuado, rebaixa o torch e quebra o vLLM 0.24/cu130) -> quantização = fp8 (docs/11).
ft = ["transformers>=5.0", "peft>=0.19", "trl>=1.0", "bitsandbytes>=0.45", "accelerate>=1.0", "datasets>=3.0", "vllm>=0.24", "seqeval>=1.2"]
# Fase 3 — dados estruturados
estruturados = ["duckdb>=1.0", "pandas>=2.2", "scikit-learn>=1.5", "matplotlib>=3.9", "statsmodels>=0.14", "openpyxl>=3.1"]
# Fase 4 — agente
agente = ["langgraph>=1.0"]
# MLOps (transversal)
mlops = ["mlflow>=2.14", "dvc[s3]>=3.51"]
# Dev
dev = ["ruff>=0.8", "mypy>=1.10", "pytest>=8.2", "pytest-cov>=5.0", "detect-secrets>=1.5", "pre-commit>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

# Notebooks são exploratórios/didáticos: liberamos lambda nomeada (E731) e import
# fora do topo (E402), comuns e legítimos nesse contexto.
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E731", "E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
