[project]
name = "rodoia"
version = "0.0.0"
description = "Plataforma de IA sobre a regulação e os dados abertos do transporte rodoviário brasileiro (ANTT)."
readme = "README.md"
# 3.12 é o que o projeto REALMENTE roda e testa: `.python-version` = 3.12, o CI usa 3.12 e a
# Nitro roda 3.12.3. O `>=3.11` que estava aqui nunca foi exercitado em lugar nenhum — mais um
# claim sem lastro, do mesmo tipo do `strict = true` que nunca rodava (docs/16 §2.1). O código
# provavelmente funciona em 3.11, mas "provavelmente" não é o padrão deste repo: só afirmamos o
# que medimos. Suportar 3.11 de verdade exigiria uma matriz no CI — se um dia valer, mede-se.
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Alan Joffre" }]

# Dependência mínima do núcleo. As libs pesadas de cada fase entram como
# extras, para não obrigar quem clona a instalar PyTorch/vLLM só pra ler o RAG.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
# Fase 0 — fundamentos ML/DL
fundamentos = ["numpy>=1.26", "scikit-learn>=1.5", "torch>=2.3", "matplotlib>=3.9", "pandas>=2.2"]
# Fase 1 — RAG
rag = ["fastapi>=0.111", "uvicorn>=0.30", "qdrant-client>=1.9", "sentence-transformers>=3.0", "rank-bm25>=0.2", "langchain>=0.2", "ragas>=0.1"]
# Fase 2 — fine-tuning/serving (roda na Nitro/CUDA; conjunto exato validado em
# reports/fase2_ft/versoes_nitro.txt). Pisos elevados p/ a API nova (trl 1.x usa
# SFTConfig.max_length; transformers 5.x usa dtype=). AWQ via autoawq foi DESCARTADO
# (descontinuado, rebaixa o torch e quebra o vLLM 0.24/cu130) -> quantização = fp8 (docs/11).
ft = ["transformers>=5.0", "peft>=0.19", "trl>=1.0", "bitsandbytes>=0.45", "accelerate>=1.0", "datasets>=3.0", "vllm>=0.24", "seqeval>=1.2"]
# Fase 3 — dados estruturados
estruturados = ["duckdb>=1.0", "pandas>=2.2", "scikit-learn>=1.5", "matplotlib>=3.9", "statsmodels>=0.14", "openpyxl>=3.1"]
# Fase 4 — agente
agente = ["langgraph>=1.0"]
# MLOps (transversal)
mlops = ["mlflow>=2.14", "dvc[s3]>=3.51"]
# Dev
dev = ["ruff>=0.8", "mypy>=1.10", "pytest>=8.2", "pytest-cov>=5.0", "detect-secrets>=1.5", "pre-commit>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

# Notebooks são exploratórios/didáticos: liberamos lambda nomeada (E731) e import
# fora do topo (E402), comuns e legítimos nesse contexto.
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E731", "E402"]

# CONTRATO DE TIPOS — escopo declarado, não aspiracional.
#
# `strict` vale para o NÚCLEO SERVIDO: o caminho que atende requisição (API, RAG, agente,
# guardrails, gate) + os utilitários compartilhados (config/estat/proveniência/observabilidade).
# Esse conjunto é verificado no CI (`mypy src`, portão bloqueante) e não pode regredir.
#
# Os módulos listados no override abaixo são SCRIPTS de pesquisa/treino/avaliação: rodam à mão,
# uma vez, e dependem de libs sem stubs (vLLM, torch, transformers, statsmodels). Ali o strict
# rende centenas de `type-arg`/`no-untyped-call` que denunciam o stub de terceiro, não defeito
# nosso — ruído que treina o leitor a ignorar o type-checker.
#
# A alternativa honesta seria `strict = true` no repo inteiro; era o que estava aqui, mas o mypy
# NUNCA rodava (nem no CI, nem no pre-commit) e acumulou 300 erros — uma config que ninguém
# executa é pior que uma config modesta que o CI cobra. Preferimos declarar a fronteira.
# `python_version` casa com o runtime real (3.12). Com "3.11" o mypy recusava PARSEAR o stub do
# numpy >= 2.4 ("Type statement is only supported in Python 3.12 and greater", PEP 695) e o CI
# morria com exit 2 — sem checar uma linha nossa. Passava na Nitro só porque lá o numpy é 2.3.5,
# antigo o bastante para não usar a sintaxe nova: divergência de ambiente, não de código.
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rodoia.anotacao",
    "rodoia.agente.avaliar",
    "rodoia.data.baixar_acidentes",
    "rodoia.data.baixar_volume",
    "rodoia.data.ingestao_volume",
    "rodoia.dados.consultas",
    "rodoia.dados.estrela",
    "rodoia.dados.previsao",
    "rodoia.ft.*",
    "rodoia.fundamentos.*",
    "rodoia.ml.*",
    "rodoia.mlops.carga",
    "rodoia.mlops.custo",
    "rodoia.mlops.drift",
    "rodoia.mlops.rastreio",
    "rodoia.mlops.reproduzir",
    "rodoia.ner.*",
    "rodoia.rag.avaliacao_geracao",
    "rodoia.rag.avaliacao_retrieval",
    "rodoia.rag.baixar_normas",
    "rodoia.rag.construir_indice",
    "rodoia.rag.fontes_antt",
    "rodoia.rag.painel_juizes",
    "rodoia.rag.redteam",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
